# event-management-system-backend

./: .env  README.md  db.sqlite3  dump.rdb  oneoff.py  pyproject.toml
api/: models.py  scrapers.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_event_date.py  0003_alter_event_address.py
core/: celery.py  settings.py  urls.py
